--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -26,7 +26,8 @@ img { /* stylelint-disable-line */
 
 @import "item";
 @import "heading";
+@import "footer";
 @import "lecture";
 @import "filters";
-@import "list";
+@import "main";
 @import "listItem";
