--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,7 +2,7 @@
 
 @font-face {
   font-family: AlfaSlab;
-  src: url("/fonts/AlfaSlabOne-Regular.ttf");
+  src: url("fonts/AlfaSlabOne-Regular.ttf"), url("../fonts/AlfaSlabOne-Regular.ttf");
   font-style: normal;
   font-weight: 400;
 }
@@ -49,8 +49,12 @@ section{
 }
 .col--6{
   @include columns(11);
+    @media (min-width: 1200px){
+     @include columns(12);
+
+  }
   @media (min-width: 500px){
-     @include columns(5);
+     @include columns(4);
 
   }
 }
@@ -79,6 +83,7 @@ section{
   border: 5px solid gray;
   border-radius: 4px;
   margin: 10px;
+  font-size:2.5em;
 }
 
 .welcome{
@@ -91,8 +96,35 @@ section{
   max-width:100%;
 
 }
+.endgame{
+   @include columns(11);
+   flex-direction: column;
+
+}
 .answer__img{
   width: 100%;
   max-height: 100%;
 }
+.endgame__img__box{
+ 
+  width: 100%;
+  margin:0 auto;
+}
+.endgame__img__box > img{
+  width: 100%;
+}
+.endgame__text{
+  font-size: 2em;
 
+}
+.endgame_bt_row{
+  @include row();
+}
+.endgame__button{
+  @include columns(6);
+  border: 2px solid gray;
+  text-align: center;
+  vertical-align: center;
+  margin:10px;
+  font-size:2em;
+}
